--- a/Nedersaksiese_humor.mw
+++ b/Nedersaksiese_humor.mw
@@ -8,9 +8,11 @@ In verscheiden Nedersaksische uutgaven is een soortement stark verhaal te viende
 ====Vloedbeld====
 De [[Almelo|Almelose]] schriever [[Gerard Vloedbeld|Meister Vloedbeld]] scheup ''[[Mans Kapbaarg, 'n grootsten leugenbuul van 't Tukkerlaand]]''. Mans vertelt as een Twèentse [[Baron von Münchhausen]] aover zien vermiende aoventuren as saldaot onder Napoleon in Spanje, Ruslaand en de Slag bi'j Waterloo. Een veurbield daoruut:
 
-:''"[...] De keizer reup miej nog gaauw nao: "Kapbaarg, doo de grootnis an diene maö." Madame Wiesken wenken miej 'n ofscheid met eer wit tukdeusken en doo ik 'n Vaderonze te bidden ees umkeek, stön ze nog oop dezölfde stie te weaien met 't hemdslipken."
-:''"Keerl en gen ean, Mans, wat he'j völ beleawd!" zeg Moosantjen. "En woer gung 't oe dan wiederoop in dat grote Ruslaand?"
-:''"Best! Met zukke keerls as de Rongenjong en den Boornsen en ik wil miej zölf ok nich vot smieten, har de keizer wat biej te zetten, dat kö'j drieste leuven. Biej de Kezakken ha'w den schrik der a gaauw in. At ze oons in de veerte zaggen ankommen, dan reupen ze a: "Oe goed oe goed, daor he'j den Kapbaargowitsj Krommendieksky en ziene maö, lao'w maken da'w vot komt, want dee onklaoren pleert allens plat, wat eer vuur de plempe komp." En dan steuwen ze oet mekaar as ne koppel wegwiezers, woer nen snellen loodkloot tusken vaalt."''
+<blockquote style="font-style: italic;">
+:"[...] De keizer reup miej nog gaauw nao: "Kapbaarg, doo de grootnis an diene maö." Madame Wiesken wenken miej 'n ofscheid met eer wit tukdeusken en doo ik 'n Vaderonze te bidden ees umkeek, stön ze nog oop dezölfde stie te weaien met 't hemdslipken."
+:"Keerl en gen ean, Mans, wat he'j völ beleawd!" zeg Moosantjen. "En woer gung 't oe dan wiederoop in dat grote Ruslaand?"
+:"Best! Met zukke keerls as de Rongenjong en den Boornsen en ik wil miej zölf ok nich vot smieten, har de keizer wat biej te zetten, dat kö'j drieste leuven. Biej de Kezakken ha'w den schrik der a gaauw in. At ze oons in de veerte zaggen ankommen, dan reupen ze a: "Oe goed oe goed, daor he'j den Kapbaargowitsj Krommendieksky en ziene maö, lao'w maken da'w vot komt, want dee onklaoren pleert allens plat, wat eer vuur de plempe komp." En dan steuwen ze oet mekaar as ne koppel wegwiezers, woer nen snellen loodkloot tusken vaalt."
+</blockquote>
 
 Uut: G.B. Vloedbeld, (1927), ''Mans Kapbaarg, 'n grootsten leugenbuul van 't Tukkerlaand'', Boorn: G.W. ten Tusscher
 
@@ -19,19 +21,23 @@ De Nederlandse VolksverhalenBank stelt: ''"nieuwe Münchhausens zijn er [d.w.z. 
 ====Jonker====
 Ok de volgende twei verhaalties bint kenmarkend veur dit soortement starke verhalen.
 
-:'' 'Toe ik zo'n jong ware, mus ik ook saldaot worden. Det was in de tied van Nepoleon. Mien moeder stund an de weg te krieten, toe wij mit menare weg gungen, want wij mussen naor Ruslaand toe. Now, det is een gloepens ende weg en wij zulden 't te voete doen. Kuj begriepen, det ze dachten, det ze oens nooit weer zulden zien. Mar ik ware glad genogt: ik bleve wat in de buurte van Nepoleon, want hijzölfs en nog meer van die heugen reden te peerd. Ik dachte, as ze der iene ofskiet of zo, dan kroep ik ter gauw op. En 't duurden dan ook niet laank, of ik hadde al een peerd onder mij.
-:''[...]
-:''Net zoa'k edacht hadde, wij verspeulden 't.
-:''Daor kwamen ze an, de oenzen. Zo hard as ze kunden! Nepoleon veurop. De Russen zatten heur achter de broek. Ikke gauw op 't peerd en rönden ook mit veuran, vlakbij Nepoleon. Ik zegge: 'Now, now, Nepoleon.' 'Ja, Hendrik', zeg hij, 'wel now, now.'
-:''[...]
-:''Ik steuke de narms in de heugte (en mitiene maakten hij die meneuvels der ook bij) en ik reupe: Nepoleon, 't giet mis! 'Ja, Hendrik', zeg hij, 'det geleuve ik ook', en hij skudde mit de kop. Hij weer te peerd en ikke ook; hij veurop en ikke der achteran.''
+<blockquote style="font-style: italic;">
+:'Toe ik zo'n jong ware, mus ik ook saldaot worden. Det was in de tied van Nepoleon. Mien moeder stund an de weg te krieten, toe wij mit menare weg gungen, want wij mussen naor Ruslaand toe. Now, det is een gloepens ende weg en wij zulden 't te voete doen. Kuj begriepen, det ze dachten, det ze oens nooit weer zulden zien. Mar ik ware glad genogt: ik bleve wat in de buurte van Nepoleon, want hijzölfs en nog meer van die heugen reden te peerd. Ik dachte, as ze der iene ofskiet of zo, dan kroep ik ter gauw op. En 't duurden dan ook niet laank, of ik hadde al een peerd onder mij.
+:[...]
+:Net zoa'k edacht hadde, wij verspeulden 't.
+:Daor kwamen ze an, de oenzen. Zo hard as ze kunden! Nepoleon veurop. De Russen zatten heur achter de broek. Ikke gauw op 't peerd en rönden ook mit veuran, vlakbij Nepoleon. Ik zegge: 'Now, now, Nepoleon.' 'Ja, Hendrik', zeg hij, 'wel now, now.'
+:[...]
+:Ik steuke de narms in de heugte (en mitiene maakten hij die meneuvels der ook bij) en ik reupe: Nepoleon, 't giet mis! 'Ja, Hendrik', zeg hij, 'det geleuve ik ook', en hij skudde mit de kop. Hij weer te peerd en ikke ook; hij veurop en ikke der achteran.
+</blockquote>
 
 Uut: Lucas Jonker (1988), ''Harm: boerenlèven an de Riest''. Zuudwolde: Stichting Het Drentse Boek (blz. 60-61). Eerste drok 1928
 
 ====Wassing====
-:''"Joa", zee de man. Je maarkten aan zien ogen, dat hai t weer zag. "Joa, Barteld kwam oet dainst en waarkte weer op t laand. Op n dag ston hai te geutjen in n hail daipe gruppel. Swoare grieze klaai van Grunnen jompt'e aal deur langzoamer boven zok oet.
-:''Op de diek heurde Barteld n koetse aankomen. Der stapte n heer oet. Den op weg was der nait t geluud van klomben, moar van leren stiefels. Dat kon Barteld heuren, al kon e in daipte van gruppel nait zain wat op de diek gebeurde.
-:''Stiefels luipen noa de gruppel tou. Aan raand van de gruppel bleef de heer stoan. Hai keek omdele en ruip: Guie mörn, Barteld. En Barteld kikt noa boven, zugt de heer stoan en röpt weerom: guie mörn, Majesteit. Dat was Willem Drij. Ze konden nander. Barteld haar ja onder hom daind.''
+<blockquote style="font-style: italic;">
+:"Joa", zee de man. Je maarkten aan zien ogen, dat hai t weer zag. "Joa, Barteld kwam oet dainst en waarkte weer op t laand. Op n dag ston hai te geutjen in n hail daipe gruppel. Swoare grieze klaai van Grunnen jompt'e aal deur langzoamer boven zok oet.
+:Op de diek heurde Barteld n koetse aankomen. Der stapte n heer oet. Den op weg was der nait t geluud van klomben, moar van leren stiefels. Dat kon Barteld heuren, al kon e in daipte van gruppel nait zain wat op de diek gebeurde.
+:Stiefels luipen noa de gruppel tou. Aan raand van de gruppel bleef de heer stoan. Hai keek omdele en ruip: Guie mörn, Barteld. En Barteld kikt noa boven, zugt de heer stoan en röpt weerom: guie mörn, Majesteit. Dat was Willem Drij. Ze konden nander. Barteld haar ja onder hom daind.
+</blockquote>
 
 Uut: Gerrit Wassing (2000), ''Met de vouten in t wotter''. Assen: Servo (blz. 40-41)
 
@@ -355,7 +361,7 @@ Dit grepken kan zowal verteeld wördn duur katteliekn, as zelfspot, mear ook duu
 :Woarop Grönneger franterg kiekt en sègt: "Macht nicht aus..."
 
 ===Hou binnen de Fraizen ontstoan?===
-:Dou der in Grönnen n haalfmalle geboorn wuir, wuir e mit n bongel over de [[Laauwers]] kwakt. Tegenswoordeg het man der in Fraislaand n traditsie van môkt en nuimt man dit "fierljeppen"''.
+:Dou der in Grönnen n haalfmalle geboorn wuir, wuir e mit n bongel over de [[Laauwers]] kwakt. Tegenswoordeg het man der in Fraislaand n traditsie van môkt en nuimt man dit "fierljeppen".
 
 ===t Is rood mit wit en raaist terug ien tied.===
 :De train noar Leeuwerd tou
@@ -392,7 +398,7 @@ Der lopen n Hindoestoan, n Jeud en n Frais deur Drìnt en dij wollen aargens slo
 :Twee Grunningers hadden drokte um een cent.
 
 ===Hoe döt een ambulance in Grunning?===
-:Thèthuuthèthuu''
+:Thèthuuthèthuu
 :''(Aordigst wanneer e verteld wördt.)''
 
 == Over Oostfreisland of Oostfreisen ==
