--- a/Nedersaksisch_E.mw
+++ b/Nedersaksisch_E.mw
@@ -21,7 +21,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit E begunt''' oet 't [[Neders
 **''eekhoorne'' ([[Une]], [[Vaossen]], [[Apeldoorne (stad)|Apeldoorne]])
 **''eekheurn'' ([[Wezep]])
 **''ekeltjen'' ([[Nunspeet]])
-**''eker'', ekertie{{small()|n}}''
+**''eker'', ekertie{{small()|n}}
 **''eikertien'' ([[Waopenvelde]])
 **''iekertien'' ([[Heerde]])
 **''kateker'' ([[Apeldoorne (stad)|Apeldoorne]])
