--- a/21_december.mw
+++ b/21_december.mw
@@ -9,6 +9,7 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''21 december'''
 ==Geboren==
 * [[1966]] - [[Marco Borsato]], [[Nederlaand|Nederlaanse]] zanger
 * [[1503]] - Vermodeliken geboortedoatum van [[Michel de Nostredame]]
+* [[2003]] - [[ Nieke Wichgers]],
 
 ==Uut de tied==
 *...
