--- a/Kloosterwieke.mw
+++ b/Kloosterwieke.mw
@@ -5,20 +5,22 @@ t Ook nait zo vrumd dat de grootste en belaangriekste karnevaalsverainen van Tro
 == Karnevaalslaid ==
 t Karnevaalslaid van Kloosterwieke is t ''kiele kiele Fennechie'':
 
-:''Kiele kiele kiele kiele Fennechie
-:''Zet die ais even op dij knij van mie
-:''k Wil die hail mien leven
-:''Doezend smokken geven
-:''Kiele kiele kiele kiele Fennechie
-:''Zet die ais even op dij knij van mie
-:''Aal geft t nog zonnen knaal
-:''t Is Troapler karnevaal
-:''t Is Troapler karnevaal
+<poem style="padding-left:1.5em; font-style: italic;">
+Kiele kiele kiele kiele Fennechie
+Zet die ais even op dij knij van mie
+k Wil die hail mien leven
+Doezend smokken geven
+Kiele kiele kiele kiele Fennechie
+Zet die ais even op dij knij van mie
+Aal geft t nog zonnen knaal
+t Is Troapler karnevaal
+t Is Troapler karnevaal
+</poem>
 
 :de Kloosterwiekers roupen:
-:''Kloosterwiekers!
+:''Kloosterwiekers!''
 :t publiek roupt:
-:''Alaaf!
+:''Alaaf!''
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Karnevaal]]
