--- a/Jeneverbees.mw
+++ b/Jeneverbees.mw
@@ -54,7 +54,7 @@ Ofbeelding:Illustration Juniperus communis0.jpg
 * [[Sallaans]]: ''dampol''
 * [[Tweants]]: ''jeneawerbeaze''
 * [[Veluws]]: 
-** ''jeneverbe{{small()|e}}s, ''-beze''
+** ''jeneverbe{{small()|e}}s'', ''-beze''
 ** ''dammestruke'' ([[Attem]])
 ** ''dammel'' ([[Wenum-Wiesel]])
 ** ''dommelholtbussien'' ([[Emst]])
