--- a/Westerkertier.mw
+++ b/Westerkertier.mw
@@ -1,6 +1,5 @@
-[[Ofbeelding:Locator Westerkwartier.png|right|thumb|Lokoatsie van t Westerkwartaaier in Grunnen]]
-[[Ofbeelding:Seelandewesterkwartier.png|thumb|right|t Westerkertier om 1300]]
-<div style="text-align: justify">
+[[Ofbeelding:Locator Westerkwartier.png|thumb|Lokoatsie van t Westerkwartaaier in Grunnen]]
+[[Ofbeelding:Seelandewesterkwartier.png|thumb|t Westerkertier om 1300]]
 t '''Westerkertaaier''' is n laandstreek en [[Westerkertier (gemainte)|gemeente]] ien de provìnzie [[Grunnen (provìnzie)|Grunnen]]. t Gebied wordt begrensd deur de [[Laauwers]] (tevens de grens mit [[Fraislaand]]), [[Drenthe|t Drint]], t [[Raitdaip|Rietdaip]] en de Stad [[Grunnen (stad)|Grunnen]].
 
 De grootste lougen in t Westerkertaaier binnen [[Leek (Grunnen)|De Lieke]], [[Zuudhörn]] en [[Gruupskerk]]. De Lieke wordt ien t algemeen zain as de heufdploats van t Westerkwartaaier.
