--- a/Justus_Nipetang.mw
+++ b/Justus_Nipetang.mw
@@ -1,13 +1,15 @@
 '''Justus Nipetang''' was de meugelijke schriever van een dialoog uut 1671 of 1672 in 't [[Nedersaksisch]] van 't [[Westfalen|Westfaals]]-[[Nederlaand|Nederlaandse]] grèensgebied, de ''To hooupe Kallinge Manges den SWARTEN MEYSTER Onde sinen KNEGT'' (in een aandere drok: ''t'Samen-spraak, Ofte VVestphaelsche To hooupe Kallinge Manges den SWARTEN MEYSTER Onde sinen KNEGT'').
 
 De dialoog is anoniem uutegeven, mar onder de opdracht stiet de name Justus Nipetang, wat een pseudoniem lek te wezen.
- 
+
 ==Inhold en context van de dialoog==
 De ''To hooupe Kallinge'' telt zo'n 7028 woorden aover zo'n 743 riegels, in twee kolommen verdield aover tien bladzieden, plus titelblad en opdracht. 't Is een [[satire|satirische]] samenspraoke op riem tussen de duvel en zien knecht; mit de leste wördt toe-espeuld op de bisschop van [[Mönster]], [[Christoph Bernhard von Galen]].<ref>Johan de Caluwe en Jacques van Keymeulen (red.) (2010). ''Voor Magda: Artikelen voor Magda Devos bij haar afscheid van de Universiteit Gent''. Gent: Academia Press. Blz. 441-466</ref> In de tweespraoke lipt de knecht dat zien 'aensleege' (anslagen) aldeur mislokt, mar de duvel treitert hum en jut hum op um 't nog weer ies te perberen. Van Galen was in juni 1672, 't meugelijke jaor van uutgave van de ''To hooupe Kallinge'', [[Tweide Mönsterse Oorlog|de oostelijke Nederlaanden binnenevalen]] en stiet daor sinds zien mislokte beleg van [[Grunnen (stad)|Grunning]] bekend as 'Bommen Berend'. De leste Mönsterse troepen zolden pas in meie 1674 weer vurtgaon uut de Republiek. In de klucht nuumt de duvel zien knecht ienmaol bij name:
 
-:''Sorgest dou man / dat de luude nig roepet / sie door / door velt
-:''Beerent in gen [=in den] wooter / hi wol / on hi kan nig duuken /
-:''Hi blijft soo ligtveerdig drieven as ein ende kuuken.
+<poem style="margin-left:1.5em; font-style:italic">
+Sorgest dou man / dat de luude nig roepet / sie door / door velt
+Beerent in gen [=in den] wooter / hi wol / on hi kan nig duuken /
+Hi blijft soo ligtveerdig drieven as ein ende kuuken.
+</poem>
 
 Op 't titelblad vaalt onder de titel te lezen: ''"In den DARDEN DRUK, On allemool mislukt."'' Daor weer onder stiet een niet geïdentificeerde plaatse van uutgave: ''"To ADTERTE, Veur den Bukenhendler in de Vive sinnen, den 18 Augusti, 1672"''. De klucht wördt veurofegaone deur een [[Nederlaands|Nederlaandstalige]] opdracht ''"Aan den Natuerlijck-geboren Krijgshelt CHRISTOFFEL RINGKRAAG"''. Onder de opdracht stiet: ''"Actum Lunckhousen, den 3. Sep.in 't Iaer 1672."'' (een aandere uutgave gef dezölfde datum mar 't jaor 1671). De onder de opdracht genuumde plaatse is 't [[Münsterlaand|Münsterlaandse]] [[Lünkhusen]] ([[Hoogduuts]]: Lüdinghausen). Net as Justus Nipetang, lek Christoffel Ringkraag een pseudoniem te wezen.
 
@@ -16,41 +18,43 @@ De taalkundigen [[Hermann Niebaum]] en [[Siemon Reker]] bespreek de tekst in heu
 ==Fragment==
 De tekst van de uutgave mit datum 18 augustus 1672 begunt as volgt.
 
-:''Den Meyster komt bi nagte veur des Knegts bedde, ont fraget,
-:''
-:''MEYSTER.
-:''Woe isset knegt: ligget di de spillen inde as?
-:''
-:''KNEGT.
-:''Ai / loot mig rasten / ik sin nig waal to pas.
-:''
-:''M. Woor mangelet di / in ’t heuft / eft in de si’en?
-:''
-:''K. Mi is soo kwellik / ’k wol allemoole wal spi’en.
-:''
-:''M. Loot mek en mool seyn / mi dunket dou bist gesont:
-:''Pluk op / outen neste dou luusigen hont.
-:''Ik hebbe met di to schaffen.
-:''Gevet di los / one darentegen to blaffen.
-:''
-:''[Hy steyt oppe, ont morret.]
-:''
-:''K. Ik aarem minsche. Wo dit is ein bedruuft waark
-:''Datstou mi bi nagt bi ontide altijd plogest / on drivest so staark
-:''Dat ik (as ander luude) minen nagtrast nig holden mag.
-:''Wat wil dit nog geeven op minnen olden dag.
-:''Misgunstou nu dat ik ligge: wo dit is to gekkelik
-:''Ik heb door even / ein dink eseyn / dat looten soo schrekkelik:
-:''’t Was as wen der kweem ein man veur mi stoon /
-:''Den hadde sig mine kleider aengedoon.
-:''On den Man had neenen heuft op siner nakken /
-:''Sijn heuft stont oppe daal / manges sinen hakken.
-:''On dat heuft / dat aengesigte / was even os het mijn.
-:''Pots klingen / woe verschrak ik van den hesliken schijn.
-:''Den angste sit mi nog in alle minen leeden.
-:''On likewaal loot stou mi nig met freeden
-:''Oppen bedde rasten. Wo dit is oouk slegt.
-:''[...]''
+<poem style="margin-left:1.5em; font-style:italic">
+Den Meyster komt bi nagte veur des Knegts bedde, ont fraget,
+
+MEYSTER.
+Woe isset knegt: ligget di de spillen inde as?
+
+KNEGT.
+Ai / loot mig rasten / ik sin nig waal to pas.
+
+M. Woor mangelet di / in ’t heuft / eft in de si’en?
+
+K. Mi is soo kwellik / ’k wol allemoole wal spi’en.
+
+M. Loot mek en mool seyn / mi dunket dou bist gesont:
+Pluk op / outen neste dou luusigen hont.
+Ik hebbe met di to schaffen.
+Gevet di los / one darentegen to blaffen.
+
+[Hy steyt oppe, ont morret.]
+
+K. Ik aarem minsche. Wo dit is ein bedruuft waark
+Datstou mi bi nagt bi ontide altijd plogest / on drivest so staark
+Dat ik (as ander luude) minen nagtrast nig holden mag.
+Wat wil dit nog geeven op minnen olden dag.
+Misgunstou nu dat ik ligge: wo dit is to gekkelik
+Ik heb door even / ein dink eseyn / dat looten soo schrekkelik:
+’t Was as wen der kweem ein man veur mi stoon /
+Den hadde sig mine kleider aengedoon.
+On den Man had neenen heuft op siner nakken /
+Sijn heuft stont oppe daal / manges sinen hakken.
+On dat heuft / dat aengesigte / was even os het mijn.
+Pots klingen / woe verschrak ik van den hesliken schijn.
+Den angste sit mi nog in alle minen leeden.
+On likewaal loot stou mi nig met freeden
+Oppen bedde rasten. Wo dit is oouk slegt.
+[...]
+</poem>
 
 ==''Haagse Posttyding uyt Parnas''==
 Iene die as hum Justus Nipetang nuumt hef wieder nog ''Haagse Posttyding uyt Parnas'' uutegeven, een [[schotschrift]] tegen een köppel regenten uut [[Haarlem]], ''"Gedrukt in 'sGravenhage by Justus Nipetang in de lacchende waarheid 1686"''.<ref>Caroline Louise Thijssen-Schoute (1939). ''Nicolaas Jarichides Wieringa: een zeventiende-eeuws vertaler van Boccalini, Rabelais, Barclai, Leti e.a.''. Assen: Van Gorcum & Comp. N.V. Blz. 95.</ref>
