--- a/The_Spitfires.mw
+++ b/The_Spitfires.mw
@@ -29,7 +29,7 @@ In de joaren 90 van de veurege eeuw bunt de bloazers deroet egoane, en vervongen
 *''Ik ben Soldoat'' (1998)
 *''De haan is dood'' (Sony Music TTS 11943, 2000)
 *''Veur de winnaars'' (2001)
-*''Maksie singel (2002)
+*''Maksie singel'' (2002)
 *''Ik red mien wel'' (2009) 
 *''Ik goa toch mooi Deur'' (2017) [Hein Solo als Hein van the Spitfires] 
 *''Lachen is gezond'' (eigen productie, ?)
