--- a/Ragnarök.mw
+++ b/Ragnarök.mw
@@ -10,7 +10,13 @@ Et meyrvold van et selfstandige naamwoord ''røk'' hevt verskillende bedüdingen
 ==Verloup==
 Ragnarök vangt an med ne vöärspelling döär ne [[völva]], ne wårsegster, an Woden. De sünne sal in de summers swart strålen, et weader unstümig weasen. Drey hanen sölt kraien, nen rouden in et wold, eyne med ne guldene kamme in [[Valhalla]] en nen sotterouden in de underwearld by [[Hel]]. De [[Jötunn]]-[[herder]] [[Eggthér]] sal sitten up nen höävel en up synen [[harp]] spöälen. Den waakhund [[Garmr]], den as vöär de grotte [[Gnipahellir]] an de keaten ligt, sal beginnen te julen en lösbreaken. De mensken sint verdeyld: bröders ståt mekander når et leaven, süsterskinder verbreaket öär verwantskap, et is hard up de wearld en der is horery. Lüde hebbet gin genade meyr vöär mekander.
 
-De söäns van [[Mím]] sölt spöälen, terwyl as Woden med Mím syn höyvd spreakt. [[Heimdall]] steakt synen [[Gjallarhoorn]] de lucht in en puustet. De wearldboum [[Yggdrasil]] beavt en kröänt. Den [[Jötunn]] [[Hrym]] kümt vanuut et ousten, syn skild vöär sik. In [[Middelgård]] wringt sik de slange [[Jörmungandr]] en warpet dårmed groute gulven up. Den Jötunn-adelaar [[Hræsfeldr]] kryst, en med synen skarpen nebben pikket hee an et lyk. Et skip [[naglfar]] slöt lös döär de gulven van Jörmungandr en drivt vord. De vüürjötnars kummet up vanuut [[Muspelheym]]. 
+De söäns van [[Mím]] sölt spöälen, terwyl as Woden med Mím syn höyvd spreakt. [[Heimdall]] steakt synen [[Gjallarhoorn]] de lucht in en puustet. De wearldboum [[Yggdrasil]] beavt en kröänt. Den [[Jötunn]] [[Hrym]] kümt vanuut et ousten, syn skild vöär sik. In [[Middelgård]] wringt sik de slange [[Jörmungandr]] döär de sey en warpet dårmed groute gulven up. Den Jötunn-adelaar [[Hræsfeldr]] kryst, en med synen skarpen nebben pikket hee an et lyk. Et skip [[naglfar]] slöt lös döär de gulven van Jörmungandr en drivt vord. De vüürjötnars kummet up vanuut [[Muspelheym]]. 
+
+De wårsegster düt wyder dat Jötunheym, et land van de Jötnar, in upstand is en de Æsir sik berådet. De dwargen kröänet by öäre steynen döären. Den jötun [[Surtr]] kümt vanuut et süden med syn swaerd feller as de sünne. De rotsen klippen splytet en de jötnarvrouwlüde valt der in. 
+
+De guden bevechtet de indringers: Wodan wördt leavend upesluket in syn gevecht med den wulv [[Fenrir]], wårmed syne vrouwe [[Frigg]] öäre tweyde groute verdreet te verwarken krigt (den eyrsten was den doud van öären söäne [[Balder]]). Wodan syn söäne Viðarr wreaket syn vader döär de kiwwe van Fenrir uut mekander te trekken en em recht in et härte doud te steaken med syne speare. De slange Jörmungandr düt den bek wyd lös en krigt med Donar te maken. Donar, ouk nen söäne van Woden en beskarmheyr van de wearld leyvert nen swåren stryd. Hee krigt de slange doud, mär kan dårnå noch neagen trad setten vöärdat hee selv doud dale valt. Den gud Freyr bevechtet Surtr, mär verleest. Dårnå vlüchtet mensken öäre hüse uut. De sünne wördt swart en de aerde sinket de sey in. De stearns verdwynt, stoum stigt up en vlammen likket an de heamel. 
+
+De wårsegster süt de aerde weader boaven water kummen. Nen adeler vlögt oaver nen waterval en jagt up viske by en barg. De oaverblyvende Æsir kummet by mekander up et veld Iðavöllr. Se besprekket Jörmmungandr, de groute geböärdenissen uut et verleaden en de [[Runes (skrift)|runen]]. In et grös ligget de guldene spöälstükken wårmed de guden ooit souvöäle wille hadden in Valhalla. De velden groit vanselv weader vul en rype, sunder saien. De guden [[Höder]] en Balder kummet by mekander uut [[Hel]], versonet sik en leavet tevreyden samen. 
 
 {{begin|twd}}
 [[Kategorie: Tweants artikel]]
