--- a/Hegemors.mw
+++ b/Hegemors.mw
@@ -7,6 +7,7 @@ Ze worren vuuftien sentimeter groot, oengeveer net zo groot as de [[huusmosse|hu
 Ze verplaotsen der eigen op n eigen manier: leeg bie de groend oender struken en hegen, op paodjes en zelfs in laonen van parken op zeuk naor voedsel.
 
 == Voortplanting ==
+[[File:Cuculus canorus canorus MHNT.ZOO.2010.11.149.30.jpg|thumb| ''Cuculus canorus canorus'' +  ''Prunella modularis'']]
 De voegels nestelen in hegen (vandaor de naam), mar oek in struken en lege planten.
 
 De hegemorsen in [[Noord-Europa]] trekken [[wienter|swienters]] naor t zujen en t westen. In [[Nederlaand|Nederland]] en [[België]] kommen hegenmorsen t hele jaor veur.
