--- a/Nolnkoor.mw
+++ b/Nolnkoor.mw
@@ -10,11 +10,11 @@ Net as zovölle femilies in Tweante, hebt de jongs van Morsinkhof nen [[Tweantse
 *''t Is wier ka(t)smis''
 *''Heb ie miene vrouwe zene''
 *''Schop die bal erin''
-*''t Slöttelleed''''<nowiki/>''
+*''t Slöttelleed''
 
 ==Oetgoande verbeendige==
 *[http://www.youtube.com/watch?v=dy0zcSRBnzs Vingerplaant - Karnavalsnommer van t Nolnkoor]
-*[http://www.nollnkoor.nl Offisjele webstea van t Nolnkoor]
+*[http://www.nollnkoor.nl/ Offisjele webstea van t Nolnkoor]
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Streektaolmuziek]]
