--- a/Kim_Kardashian.mw
+++ b/Kim_Kardashian.mw
@@ -1,7 +1,7 @@
-[[File:Kim_Kardashian_2019.jpg|thumb|right|250px|Kim Kardashian in [[2019]]]]
+[[File:Kim_Kardashian_2019.jpg|thumb|250px|Kim Kardashian in [[2019]]]]
 
-'''Kimberly Noel Kardashian West''' (meydkensname '''Kardashian''', den [[21 oktober]] [[1980]]) is ne [[Verienigde Staoten van Amerika|amerikaanske]] mediapersöynlikheid, model, sakenvrouw, [[akteur|aktrice]] en bekend persoon. Kardashian kreag eyrste media-andacht as vreandin en styliste van [[Paris Hilton]]. Mär pas vanaf [[2002]] kreag se breydere bekendheid döär ne [[seksvideo]], ''[[Kim Kardashian, Superstar]]'', van öär den as sik oaver internet verspreidden.<ref>[https://pagesix.com/2017/03/27/the-kim-kardashian-sex-tape-an-oral-history/ Pagesix.com. "The Kim Kardashian Sex Tape An Oral History".]</ref> Later in [[2007]] verskeynen see en öäre family in de reality-TV-ryge ''[[Keeping Up with the Kardashians]]''. Et sukses dårvan leidden al rap töt afleidingen der van, so as [[Kourtney and Kim Take New York]]'' (2011-2012) en ''[[Kourtney and Kim Take Miami]]'' ([[2009]]-[[2013]]).
- 
+'''Kimberly Noel Kardashian West''' (meydkensname '''Kardashian''', den [[21 oktober]] [[1980]]) is ne [[Verienigde Staoten van Amerika|amerikaanske]] mediapersöynlikheid, model, sakenvrouw, [[akteur|aktrice]] en bekend persoon. Kardashian kreag eyrste media-andacht as vreandin en styliste van [[Paris Hilton]]. Mär pas vanaf [[2002]] kreag se breydere bekendheid döär ne [[seksvideo]], ''[[Kim Kardashian, Superstar]]'', van öär den as sik oaver internet verspreidden.<ref>[https://pagesix.com/2017/03/27/the-kim-kardashian-sex-tape-an-oral-history/ Pagesix.com. "The Kim Kardashian Sex Tape An Oral History".]</ref> Later in [[2007]] verskeynen see en öäre family in de reality-TV-ryge ''[[Keeping Up with the Kardashians]]''. Et sukses dårvan leidden al rap töt afleidingen der van, so as ''[[Kourtney and Kim Take New York]]'' (2011-2012) en ''[[Kourtney and Kim Take Miami]]'' ([[2009]]-[[2013]]).
+
 De lätste jåren bouwden Kim Kardashian stelselmåtig ne [[online]] en [[sociale media]]-anweasigheid up. See bereikeden dårmed hunderden miljonen volgers up [[Twitter]] en [[Instagram]].<ref>[http://www.etonline.com/news/160473_kim_kardashian_on_the_success_of_her_mobile_app_and_her_social_media_empire/ ET Online. Seemayer, Zach. "Kim Kardashian on the Success of Her Mobile App and Her Social Media Empire". etonline.com.] Bekeaken up 11 juni 2016.]</ref><ref>[https://socialblade.com/instagram/top/100/followers socialblade.com. "Top 100 Instagram Users by Followers".]</ref> Se hevt verskeidene produkte med öären naam der up uutegeaven, so as et [[app|mobile spelleke]] ''Kim Kardashian: Hollywood'', ne ryge an kleyder en produkten, een fotobook under de name ''Selfish'' en ne persöynlike app med öäre naam.
 
 Dårnöäst krigt öäre verholding med den [[hiphop|räpper]] [[Kanye West]] vöäle media-andacht. Et stel trouwden in [[2014]] en hevt med mekander veer kinder.<ref>[https://www.nytimes.com/2015/04/10/t-magazine/kanye-west-adidas-yeezy-fashion-interview.html?_r=0 Caramanica, Jon.. "The Agony and the Ecstasy of Kanye West."] ''[[New York Times]]''. 10 april 2015.</ref> Up den 19. februari 2021 wör bekend at Kardashian ne skeiding van West had anevrågen.<ref>[https://nos.nl/artikel/2369449-kim-kardashian-vraagt-officieel-echtscheiding-van-kanye-west-aan.html Nos.nl. "Kim Kardashian Vraagt Officieel Echtscheiding van Kanye West Aan". 19. february 2021. 5 määrt 2021.]</ref> 
