--- a/Heksel.mw
+++ b/Heksel.mw
@@ -1,4 +1,5 @@
-''Bedooldn iej [[Hoge Heksel]]?
+''Bedooldn iej [[Hoge Heksel]]?''
+----
 
 '''Heksel''' of '''Hexel''' is ne [[boerskop]] in de gemeente [[Healdern]] in de [[Neerlaand]]se proveensie [[Oaweriessel]]. t Ligt kort bie [[Nijverdal]]. Heksel heurt met [[Nötter (Wierdn)|Nötter]], [[Sunnoa]] en Noessel töt de oolde boerskopn tusken [[Riessen]] en Nijverdal. Van vroger oet heurdn Heksel bie de boerskop Noessel, wat non ne wieke is van Nijverdal.
 
