*Empty MediaWiki Message*

--- a/Doempien.mw
+++ b/Doempien.mw
@@ -2,7 +2,8 @@
 [[Bestaand:Wren.JPG|thumb|Een schets van et doempien]]
 [[Bestaand:Troglodytes troglodytes(loz).jpg|thumb|Een ofbeelding van et doempien]]
 [[Bestaand:Zaunkoenig.jpg|thumb|Schets van een nust van et doempien]]
-[[Bestaand:Troglodytes troglodytes kabylorum Hartert, E, 1910 Tébessa MHNT ZOO 2010 11 232.jpg|thumb|''Troglodytes troglodytes '']][[File:Cuculus canorus canorus MHNT.ZOO.2010.11.149.17.jpg|thumb| ''Cuculus canorus canorus'' +  ''Troglodytes troglodytes'']]
+[[Bestaand:Troglodytes troglodytes kabylorum Hartert, E, 1910 Tébessa MHNT ZOO 2010 11 232.jpg|thumb|''Troglodytes troglodytes '']]
+[[Bestaand:Cuculus canorus canorus MHNT.ZOO.2010.11.149.17.jpg|thumb| ''Cuculus canorus canorus'' +  ''Troglodytes troglodytes'']]
 Et '''doempien''' ([[Latien]]: ''Troglodytes troglodytes'') is de ienigste [[Europa (continent)|Europese]] [[Troglodytidae|winterkeuningsoorte]]. Et is een klein drongen [[voegel]]tien van omdebi'j tien centimeter mit een opwipt stattien. Hi'j beheurt tot een femilie waorvan alle aandere soorten uutslutend in [[Ni'je Wereld|Amerike]] veurkommen, mar disse soorte is over et grootste diel van [[Eurazië]] verspreid. Et doempien is now iene van de meerst algemiene voegelsoorten, omdat hi'j him anpast het an liekegoed bosrieke as eupen gebieden. 
 
 Doempies eten veurnaemelik [[insektn|insekten]] en [[spinnen]], mar ze eten altemet ok wel [[zaod (plaante)|zaoden]] van kleine plaanties. Zien zanggeluud is helder, en het vibrerende scharpe trillers. Et Doempien is ien van de kleinste voegelsoorten van [[Europa (continent)|Europa]] en kan vanwegen zien kotte vleugels niet zo best vliegen. Hi'j is zoe'n 9,5 centimeter laank en weegt omdebi'j 10 gram. Liekegoed et mannetien as et wiefien hebben brune veren. De opvalende stat staot recht omhoge.
