en beginneken is et ja neet meyr :)

--- a/Ragnarök.mw
+++ b/Ragnarök.mw
@@ -1,6 +1,6 @@
 '''Ragnarök''' is in de [[germaanse mythologie|germaanske mytology]] et verhaal van de eandtyd van de wearld. Dårin untsteyt nen grouten oorlog, wårby de guden [[Woden]], [[Donar]], [[Dinksel]], [[Freyr]], [[Heimdall]] en [[Loki]] uut de tyd kummet, en rygel natuurrampen untståt en de aerde under water sakket. Dårnå kümt de aerde weader vannys boaven as vrüchtbår land, kummet de oaverblyvende guden by mekander en sal de wearld weader bevolked worden döär twey mensken. Ragnarök is en vöärnaam verhaal in de germaanske mytology en geleyrden maket der al lange study van.
 
-De geböärdenis steyt vöärnamelik in de [[edda|dichtedda]], upsteld in den 13. eywe uut eyrdere traditionele brunnen, en in de verhaaledda, ouk skreaven in den 13. eywe döär [[Snorri Sturluson]]. Et wördt beide ''ragnarök'' en ''ragnarøkkr'' nöömd ([[oldnoorsk]] vöär "lot van de guden" of "gudsverdüüstering". As dat lätste presenteerden et den musikskryver [[Richard Wagner]] in [[1876]] as [[opera]], under den düütsken name [[Götterdämmerung]].
+De geböärdenis steyt vöärnamelik in de [[edda|dichtedda]], upsteld in den 13. eywe uut eyrdere traditionele brunnen, en in de verhaaledda, ouk skreaven in den 13. eywe döär [[Snorri Sturluson]]. Et wördt beide ''ragnarök'' en ''ragnarøkkr'' nöömd ([[oldnoorsk]] vöär "lot van de guden" of "gudsverdüüstering"). As dat lätste presenteerden et den musikskryver [[Richard Wagner]] in [[1876]] as [[opera]], under den düütsken name [[Götterdämmerung]].
 
 ==Naamherkumst==
 Den oldnoorsken samenstelling ragnarok wördt al lange bedisterd. Et eyrste deyl, ''ragna'', is noch neet sou lastig. Et is den tweyden naamvan van ''regin'', wat "de regeyrende machten, guden" bedüdet. By et tweyde deyl wördt et lastiger, ümdat der twey varianten van bekend sint: -rök en -røkkr. Den vroo-twentigsteneysken filoloog Geir Zoëga saggen de beide förme as verskillend en meynden at ragnarök was "den doom of vernetiging van de guden" en ragnarøkkr de "verdüüstering van de guden."
@@ -18,6 +18,6 @@ De guden bevechtet de indringers: Wodan wördt leavend upesluket in syn gevecht 
 
 De wårsegster süt de aerde weader boaven water kummen. Nen adeler vlögt oaver nen waterval en jagt up viske by en barg. De oaverblyvende Æsir kummet by mekander up et veld Iðavöllr. Se besprekket Jörmmungandr, de groute geböärdenissen uut et verleaden en de [[Runes (skrift)|runen]]. In et grös ligget de guldene spöälstükken wårmed de guden ooit souvöäle wille hadden in Valhalla. De velden groit vanselv weader vul en rype, sunder saien. De guden [[Höder]] en Balder kummet by mekander uut [[Hel]], versonet sik en leavet tevreyden samen. 
 
-{{begin|twd}}
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Germaanse mythologie]]
