--- a/Zeander.mw
+++ b/Zeander.mw
@@ -1,6 +1,6 @@
-[[Ofbeelding:Map NL - Borne - Zenderen.png|220px|thumb|right|De ligging van Zeander in de gemeente [[Boorn]]]]
-[[Image:Karmelietenklooster Zenderen.jpg|thumb|right|220px|t Karmelietnklooster te Zeander met doaran greanznd de parochiekearke van ''Oonze Leve Vrouw Onbevlakt Ontvangn]]
-'''Zeander''' is t op een noa greutste [[daarp|doarp]] in de [[Tweante|Tweantse]] [[gemiente (bestuur)|gemeente]] [[Boorn]] in de [[Nederlaand]]se proveensie [[Oaveriessel]]. t Hef zon 1.400 inwonners (2004).
+[[Ofbeelding:Map NL - Borne - Zenderen.png|220px|thumb|De ligging van Zeander in de gemeente [[Boorn]]]]
+[[Ofbeelding:Karmelietenklooster Zenderen.jpg|thumb|220px|t Karmelietnklooster te Zeander met doaran greanznd de parochiekearke van ''Oonze Leve Vrouw Onbevlakt Ontvangn'']]
+'''Zeander''' is t op een noa greutste [[darp|doarp]] in de [[Tweante|Tweantse]] [[gemiente (bestuur)|gemeente]] [[Boorn]] in de [[Nederlaand]]se proveensie [[Oaveriessel]]. t Hef zon 1.400 inwonners (2004).
 
 Zeander is al n oald döarpken. t Wördn al in de tiende eeuw neumd, dootieds as ''Sindron''. Dat zol ofkoomstig ween van ''sintels'', ok wal [[oer|iezerearts]] neumd. Disse iezerearts lig nog aaltied oonder n groond biej Zeander. 
 
