--- a/Harm_Agteresch.mw
+++ b/Harm_Agteresch.mw
@@ -33,7 +33,7 @@ MC:
 
 LP's:
 *''Loat mie méér joekelul'n'' (Telstar TSP 16960, 1980)
-*''I am ben een Kentucky Tukker" (Telstar TAR 19989, 1981)
+*''I am ben een Kentucky Tukker'' (Telstar TAR 19989, 1981)
 *''Met ne glimlach'' (Telstar TAR 19007, 1982)
 *''One man show: he, he, foei, foei'' (Telstar TLP 19076, 1985)
 
