--- a/Jan_Mülstegen.mw
+++ b/Jan_Mülstegen.mw
@@ -5,7 +5,7 @@ Rond 1960 begunden Mülstegen Platduutse woorden en uutdrokking te verzameln; zo
 Mülstegen is bestuurslid van de Heimatverein der Grafschaft Bentheim en holdt baanden an mit lu mit vergeliekbere interesses in [[Twente]].
 
 ==Anhaling==
-*''Round um mij to bleuiden houndeblomen, botterblomen, zoerblaa en anner gewas. Um mij to zoemden en broemden de iemen en als reuk zoa hearlijk mooi. Up 't water van 'n kolk heurde ik of en to 'n paar einten snadern en in 't leuis [riet] zeuink 'ne reetmusse. Anners was 't heelmoals stil um mij to. Dan heurde ik up 't moal een zacht gerusse in 't grös. 'ne Eweldasse kwam up mij an. Ik bleef heel stil zitten um dat dearken nich to verschrikken. Up 'ne schiere zaundstee höl 't up an, misschien um zik to zunnen. Joa, hier bleef et en reurde zik nich mear. Dat keump mij good topasse. Noew kun ik mij dat kroepdear eem good bekieken. Ziene hoed was greun-broen met witte stippen drup. De bene wassen zoa raa ofknikt en ze schienden mij at of ze wal slim kot wassen, want et lief raakte up de ground. Wal hoast een half uur heb ik et gedullig bij dat dearken oethollen. 
+*''Round um mij to bleuiden houndeblomen, botterblomen, zoerblaa en anner gewas. Um mij to zoemden en broemden de iemen en als reuk zoa hearlijk mooi. Up 't water van 'n kolk heurde ik of en to 'n paar einten snadern en in 't leuis [riet] zeuink 'ne reetmusse. Anners was 't heelmoals stil um mij to. Dan heurde ik up 't moal een zacht gerusse in 't grös. 'ne Eweldasse kwam up mij an. Ik bleef heel stil zitten um dat dearken nich to verschrikken. Up 'ne schiere zaundstee höl 't up an, misschien um zik to zunnen. Joa, hier bleef et en reurde zik nich mear. Dat keump mij good topasse. Noew kun ik mij dat kroepdear eem good bekieken. Ziene hoed was greun-broen met witte stippen drup. De bene wassen zoa raa ofknikt en ze schienden mij at of ze wal slim kot wassen, want et lief raakte up de ground. Wal hoast een half uur heb ik et gedullig bij dat dearken oethollen. ''
 
 Uut [http://uelsen-und-umgebung.de/geschichten/swarwen.html ''Up Swarftocht in de Natur''] (ummezet in de [[West-Oaveriesselse spelling]])
 
