--- a/Mommeriete.mw
+++ b/Mommeriete.mw
@@ -5,13 +5,13 @@ Op [[28 juli]] [[1227]] wördden daor in de [[Slag bi'j Aone]] de [[Sticht Utrec
 ==Ligging==
 De precieze ligging van 't vroggere moeras bint ze niet zeker van. Een brief uut 1842 van de toenmaolige börgemeister van [[Grambargen]] nuumt de Mommeriete as een gebied in Holthone, een paar kilometer ten noordoosten van Aone. Bi'j Aone sleug Otto van Lippe volgens de 15e-ieuwse ''[[Een cronike van den greven van Benthem|Cronike van den greven van Benthem]]'' zien tenten op:
 
-:''Ende na desen is vergadert een schoen heer ''[leger]'' by Anen, daer die bisschop Otto van Utrecht sine tenten sette.
+:''Ende na desen is vergadert een schoen heer ''[leger]'' by Anen, daer die bisschop Otto van Utrecht sine tenten sette.''
 
 Aone lag dichte bi'j de revier de [[Vechte]], waoraover 't bisschoppelijke leger beveurraod kun wörden. De ''Narracio'' uut 1232 hef 't oaver'' 'die vervluukte en noodlottige plaatse Aone'.''
 
 Roelfe zette zien tenten op bi'j [[Coevern]]:
 
-:''Rolof bedachte die grote mogentheit des bisschops, brack sijn beset van Groningen ende satte sijn tenten bi dat dorp to Covorden ende bedachte dat daer een breet onlant ende ene zudde lach, daer men niet lichte mochte overcomen.
+:''Rolof bedachte die grote mogentheit des bisschops, brack sijn beset van Groningen ende satte sijn tenten bi dat dorp to Covorden ende bedachte dat daer een breet onlant ende ene zudde lach, daer men niet lichte mochte overcomen.''
 
 De aandere dag trök de bisschop mit zien leger op en wördden 't moeras in elokt.
 
@@ -19,21 +19,23 @@ De aandere dag trök de bisschop mit zien leger op en wördden 't moeras in elok
 Een schattingsregister uut 1400 nuumt 'Oedbert des Mommezoen', Oedbert, zeune van Momme. 't Kan dus wezen det 't moeras naor iene mit dizze name enuumd is.
 
 ==In de Nedersaksische schrieveri'je==
-:''As de zunne begunde te schienen
-:''op de mörgen van de dag,
-:''in de sponzige Mommeriete
-:''daor leverde Drenthe slag.
+<poem style="margin-left:1.5em; font-style:italic">
+As de zunne begunde te schienen
+op de mörgen van de dag,
+in de sponzige Mommeriete
+daor leverde Drenthe slag.
 
-:''Bi'j Aone staot de soldaoten,
-:''de Bisschop zien leger is gróót:
-:''wi'j hebt de haerdstee verlaoten,
-:''want oenze volk is in nood.
+Bi'j Aone staot de soldaoten,
+de Bisschop zien leger is gróót:
+wi'j hebt de haerdstee verlaoten,
+want oenze volk is in nood.
 
-:''[...]
+[...]
+</poem>
 
 Uut [[Roel Reijntjes]] zien ''[http://slagbijane.noordoosten.nl/ballade.htm Ballade van de Slag bi'j Ane]''
 
-:''Roet bestiet 25 jaor. Hij verschient vörreljaors. Dat betiekent dat der 4 x 25 = 100 nummers van Roet verschenen bint. Zuj dèenken. Mar geliek in 't begun al gung 't niet goed. De teller bleef 't eerste jaor op drei staon. En ok later gung der wel ies wat mis. Uuteindelijk bint der umtrent 96 nummers verschenen. Ien hiele jaorgang hen de Mommeriete.''
+:''Roet bestiet 25 jaor. Hij verschient vörreljaors. Dat betiekent dat der 4 × 25 = 100 nummers van Roet verschenen bint. Zuj dèenken. Mar geliek in 't begun al gung 't niet goed. De teller bleef 't eerste jaor op drei staon. En ok later gung der wel ies wat mis. Uuteindelijk bint der umtrent 96 nummers verschenen. Ien hiele jaorgang hen de Mommeriete.''
 
 Uut Martin Koster (2004), ''Strèupers van de taol: 25 jaor Roet'', Zuudwolde: Het Drentse Boek
 
